# OMEN

./: .gitignore  CMakeLists.txt  hqcreateConfig  init.sh  makefile  test.txt
src/: createNG.c  defines.h  enumNG.c  test.cpp  test.h
